src/tess/tl/test/fail/test_fail_unknown_type_nested_ptr.tl
// Unknown type name nested inside Ptr[Ptr[...]] should be rejected.
#module main
main() -> CInt {
    v: Ptr[Ptr[Quux]] := null
    0
}
